fixing some layout issues

--- a/styles.css
+++ b/styles.css
@@ -31,21 +31,59 @@ h2 {
 
 #top-div {
   background: #3d4a60;
-  height: 4px;
+  height: 5px;
 }
 
+.bottom-div2,
 .bottom-div {
   background: #3d4a60;
-  height: 1px;
+  height: 2px;
   margin-top: 3px;
 }
 
+fieldset,
 .container {
   display: flex;
+  flex-direction: column;
   border: none;
+  padding: 0;
 }
 
+legend {
+  font-size: 20px;
+  font-weight: bold;
+  margin: 20px 0 23px;
+}
 
+.primary,
+.secondary {
+  margin: 0;
+  justify-content: flex-end;
+  max-height: 30%;
+}
+
+input,
+select,
+textarea {
+  background: #e6eaf2;
+  border-radius: 4px;
+}
+
+input:focus {
+  border-color: coral;
+}
+
+#signup {
+  border-radius: 4px;
+  border: none;
+  background: mediumaquamarine;
+  color: white;
+}
+
+.copyright {
+  text-align: center;
+  opacity: 0.8;
+}
 
 
 /**** Mobile Layout ****/
@@ -57,9 +95,36 @@ h2 {
     padding: 25px;
   }
 
-  #top-div {
-    margin-top: 8px;
+  h2 {
+    margin-bottom: 10px;
   }
+
+  form {
+    margin: 0 3% 150px;
+  }
+
+  #top-div {
+    margin-top: 35px;
+  }
+
+  .bottom-div {
+    margin-bottom: 20px;
+  }
+
+  .bottom-div2 {
+    margin: 30px 0 25px;
+  }
+
+  .secondary span {
+    margin-bottom: 17px;
+  }
+
+  .checkboxes,
+  .radios {
+    display: inline-flex;
+    margin-bottom: 20px;
+  }
+
 
 
 }
